--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "license": "ISC",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
+    "@types/node": "^20.12.10",
     "ava": "^6.0.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
