--- a/package.json
+++ b/package.json
@@ -3,23 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  
   "scripts": {
     "test": "ava",
     "test:watch": "ava --watch"
+    
   },
   "ava": {
     "typescript": {
       "rewritePaths": {
         "src/": "dist/"
+        
       },
       "compile": "tsc"
+      
     }
+    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
+    "@types/node": "^22.4.0",
     "ava": "^6.0.1",
     "typescript": "^5.3.3"
   }
