--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
-  "scripts": {
+  "scripts": { 
     "test": "ava",
     "test:watch": "ava --watch"
   },
@@ -20,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
+    "@types/node": "^22.5.4",
     "ava": "^6.0.1",
     "typescript": "^5.3.3"
   }
