--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "target": "esnext",
+    "incremental": true,
+    "tsBuildInfoFile": "./tsbuildinfo.json",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
