--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "license": "ISC",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
-    "ava": "^6.0.1",
+    "@types/node": "^22.13.9",
+    "ava": "^6.2.0",
     "typescript": "^5.3.3"
   }
 }
