--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "license": "ISC",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
-    "ava": "^6.0.1",
+    "@types/node": "^22.13.10",
+    "ava": "^6.2.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
