--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@ava/typescript": "^4.1.0",
+    "@ava/typescript": "^5.0.0",
+    "@types/node": "^22.14.1",
     "ava": "^6.0.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
