--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "@ava/typescript": "^4.1.0",
     "ava": "^6.0.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.17.17",
+    "lodash": "^4.17.21"
   }
 }
