--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "license": "ISC",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
+    "@types/node": "^24.0.3",
     "ava": "^6.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@types/lodash": "^4.17.17",
